fixed the icon img

--- a/trading-app-frontend/.env
+++ b/trading-app-frontend/.env
@@ -1,2 +1,2 @@
-# REACT_APP_API_URL=http://13.61.9.189:8081/
-REACT_APP_API_URL=http://localhost:8081/
+REACT_APP_API_URL=http://51.21.82.0:8081/
+# REACT_APP_API_URL=http://localhost:8081/
