--- a/trading-app-backend/src/main/resources/application.properties
+++ b/trading-app-backend/src/main/resources/application.properties
@@ -1,11 +1,10 @@
-spring.datasource.url=jdbc:mysql://adminuom:CM9Jaber%26Baz05@trading-app-db.c5ukagg0c2fw.eu-north-1.rds.amazonaws.com:3306/intial_db
-spring.datasource.username=adminuom
-spring.datasource.password=CM9Jaber&Baz05
+spring.datasource.url=jdbc:mysql://51.21.82.0:3306/trading_api_db?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=5002
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
 
 server.port=8081
 
